# quickwit

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .license_header.txt  .licenserc.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-3rdparty.csv  LICENSE.md  LICENSE_QUICKWIT_ENTERPRISE.txt  MIGRATE.md  Makefile  PLAN.md  Quickwit_individual_CLA.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  _typos.toml  analysis.md  bazel-bin  bazel-out  bazel-pomsky  bazel-testlogs  check_license.sh  deny.toml  dep-tree.py  docker-compose.yml  flake.nix  install.sh  installer  installer.sh  (+9 more)
distribution/lambda/: .gitignore  Makefile  Pipfile  README.md  app.py  cdk.json  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
meta-store/: Cargo.toml
meta-store/src/: lib.rs  meta_store.rs  object_storage.rs
quickwit/: .dockerignore  .license_header.txt  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE-3rdparty.csv  Makefile  NOTICE  TODO.md  clippy.toml  compute_fingerprints.rs  deny.toml  dependency-licenses.html  diesel-guard.toml  fingerprint_test.rs  license-tool.toml  rust-toolchain.toml  rustfmt.toml  vector.toml
quickwit-actors/: Cargo.toml  README.md
quickwit-actors/examples/: ping_actor.rs
quickwit-actors/src/: actor.rs  actor_handle.rs  actor_state.rs  actor_with_state_tx.rs  async_actor.rs  channel_with_priority.rs  command.rs  envelope.rs  join_handle.rs  kill_switch.rs  lib.rs  mailbox.rs  observation.rs  parallel_actors.rs  progress.rs  runner.rs  scheduler.rs  spawn_builder.rs  supervisor.rs  sync_actor.rs  tests.rs  universe.rs
quickwit-aws/: Cargo.toml
quickwit-aws/src/: error.rs  lib.rs  region.rs  retry.rs
quickwit-backward-compat/: Cargo.toml  README.md  build.rs
quickwit-backward-compat/test-data/: split_metadata-v0-5b23801225dcd43925e7772aae094a2e.expected.json  split_metadata-v0-noversion.expected.json  split_metadata-v0-noversion.json
quickwit-backward-compat/tests/: split_metadata_non_regression.rs  test_backward_compatibility.rs
quickwit-cli/: Cargo.toml  build  build.rs  update_on_config.md
quickwit-cli/src/: cli.rs  cli.yaml  cli_command.rs  cli_doc_ext.toml  generate_markdown.rs  index.rs  job.rs  lib.rs  main.rs  service.rs  source.rs  split.rs  stats.rs  template.rs
quickwit-cli/tests/: cli.rs  helpers.rs
quickwit-cluster/: Cargo.toml
quickwit-cluster/docs/: kubernetes-discovery.md
quickwit-cluster/src/: client.rs  cluster.rs  error.rs  lib.rs  service.rs  test_utils.rs  utils.rs
quickwit-common/: Cargo.toml
quickwit-common/src/: checklist.rs  coolid.rs  fs.rs  lib.rs  lru_cache.rs  memory_usage.rs  metrics.rs  net.rs  rand.rs  runtimes.rs  service.rs  uri.rs
quickwit-config/: Cargo.toml
quickwit-config/src/: config.rs  index_config.rs  lib.rs  server_config.rs  service.rs  source_config.rs  templating.rs
quickwit-control-plane/: Cargo.toml
quickwit-control-plane/src/: cluster_client.rs  index.rs  index_service_client.rs  lib.rs  metastore_service.rs
quickwit-core/: Cargo.toml
quickwit-core/src/: command_args.rs  counter.rs  create_index.rs  delete_index.rs  index.rs  lib.rs  search_index.rs  test_utils.rs
quickwit-directories/: Cargo.toml
quickwit-directories/src/: bundle_directory.rs  bundle_storage.rs  caching_directory.rs  debug_proxy_directory.rs  hot_directory.rs  lib.rs  storage_directory.rs  union_directory.rs
quickwit-doc-mapper/: Cargo.toml
quickwit-doc-mapper/benches/: doc_to_json_bench.rs
quickwit-doc-mapper/src/: doc_mapper.rs  error.rs  lib.rs  query_builder.rs  sort_by.rs  tag_pruning.rs  tokenizers.rs
quickwit-doc-mapping/: Cargo.toml
quickwit-doc-mapping/src/: all_flatten_mapper.rs  default_mapper.rs  error.rs  lib.rs  mapper.rs  query_builder.rs  wikipedia_mapper.rs
quickwit-index/: Cargo.toml
quickwit-index-management/: Cargo.toml
quickwit-index-management/src/: client.rs  error.rs  grpc_adapter.rs  lib.rs  test_utils.rs
quickwit-index/data/: test_corpus.json
quickwit-index/src/: lib.rs
quickwit-indexing/: Cargo.toml  README.md
quickwit-indexing/failpoints/: dai-mod.rs  mod.rs
quickwit-indexing/src/: args.rs  controllable_directory.rs  controlled_directory.rs  counters.rs  dai-controlled_directory.rs  dai-lib.rs  garbage_collection.rs  indexing_service_client.rs  lib.rs  merge_policy.rs  metrics.rs  rest.rs  semaphore.rs  test_utils.rs
quickwit-ingest-api/: Cargo.toml  DESIGN.md
quickwit-ingest-api/src/: errors.rs  ingest_api_service.rs  lib.rs  metrics.rs  queue.rs
quickwit-janitor/: Cargo.toml
quickwit-janitor/src/: garbage_collection.rs  janitor_service.rs  lib.rs  retention_policy_evaluation.rs  retention_policy_execution.rs
quickwit-metastore/: .env  Cargo.toml  README.md  build.rs  diesel_postgresql.toml  docker-compose.yml
quickwit-metastore/src/: checkpoint.rs  error.rs  lib.rs  metastore.rs  metastore_resolver.rs  split_metadata.rs  split_metadata_version.rs  tests.rs
quickwit-nodelet/: Cargo.toml
quickwit-nodelet/src/: error.rs  grpc_service.rs  lib.rs
quickwit-proto/: Cargo.toml  build.rs
quickwit-proto/proto/: cluster.proto  index_api.proto  index_management_api.proto  ingest_api.proto  metastore_api.proto  nodelet.proto  push_api.proto  quicklet_api.proto  search_api.proto
quickwit-proto/src/: cluster.rs  index_api.rs  index_management_api.rs  lib.rs  nodelet.rs  opentelemetry.proto.collector.logs.v1.rs  opentelemetry.proto.collector.trace.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.trace.v1.rs  quicklet_api.rs  quickwit.rs  quickwit_ingest_api.rs  quickwit_metastore_api.rs  quickwit_push_api.rs
quickwit-search/: Cargo.toml  README.md  build.rs
quickwit-search/src/: assignment.rs  client.rs  client_pool.rs  cluster_client.rs  collector.rs  error.rs  export.rs  fetch_docs.rs  filters.rs  leaf.rs  lib.rs  metrics.rs  root.rs  (+9 more)
quickwit-serve/: Cargo.toml  README.md  build.rs
quickwit-storage/: Cargo.toml
quickwit-swim/: Cargo.toml  LICENSE-MIT  README.md
quickwit-telemetry/: Cargo.toml
(+3020 files in other folders)
