[workspace]

members = [
  "quickwit-actors",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-config",
  "quickwit-core",
  "quickwit-index-config",
  "quickwit-directories",
  "quickwit-metastore",
  "quickwit-proto",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-swim",
  "quickwit-telemetry",
  "quickwit-indexing",
]
