[workspace]

members = [
  "quickwit-actors",
  "quickwit-common",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-config",
  "quickwit-core",
  "quickwit-doc-mapper",
  "quickwit-directories",
  "quickwit-metastore",
  "quickwit-proto",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-swim",
  "quickwit-telemetry",
  "quickwit-indexing",
]
