[workspace]
resolver = "2"
members = [
  "quickwit-actors",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-common",
  "quickwit-config",
  "quickwit-core",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-indexing",
  "quickwit-ingest-api",
  "quickwit-metastore",
  "quickwit-proto",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-telemetry",
]

[profile.dev]
debug = 0
