[package]
name = "quickwit-meta-store"
version = "0.1.0"
authors = ['Quickwit <hello@quickwit.io>']
edition = "2018"

[dependencies]
anyhow = '1.0'
async-trait = '0.1'
thiserror = '1.0'

quickwit-storage = { version = "0.1.0", path = "../storage" }

[dependencies.rusoto_core]
version = '0.46'
default-features = false
features = ['rustls']
