[package]
name = "quickwit-meta-store"
version = "0.1.0"
authors = ['Quickwit <hello@quickwit.io>']
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

quickwit-storage = { version = "0.1.0", path = "../storage" }

[dev-dependencies]
tokio = {version="1.6", features=["full"]}
