[package]
name = "quickwit-actors"
version = "0.2.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = 'AGPL-3.0-or-later'  # For a commercial, license, contact hello@quickwit.io
description = "Actor framework used in quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.16", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
flume = "0.10"
futures = "0.3"
tracing = "0.1.29"
quickwit-common = { version = "0.2.1", path = "../quickwit-common" }

[dev-dependencies]
rand = "0.8"
