[package]
name = "quickwit-aws"
version = "0.3.0"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Utilities for working with AWS."
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
futures = "0.3"
rand = "0.8"
rusoto_core = {version = "0.47", default-features = false, features = ["rustls"]}
rusoto_kinesis = { version = "0.47", default-features = false, features = ["rustls"], optional = true }
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"] }
tokio = "1.19"
tracing = "0.1"

[features]
kinesis = ["rusoto_kinesis"]
