[package]
name = "quickwit-aws"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Utilities for working with AWS."
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
hyper-rustls = "0.23"
once_cell = "1"
rand = "0.8"
rusoto_core = { version = "0.48", default-features = false, features = [
  "rustls"
] }
rusoto_kinesis = { version = "0.48", default-features = false, features = [
  "rustls"
], optional = true }
rusoto_s3 = { version = "0.48", default-features = false, features = [
  "rustls"
] }
rusoto_sts = { version = "0.48", default-features = false, features = [
  "rustls"
] }
tokio = "1.20"
tracing = "0.1"

[features]
kinesis = ["rusoto_kinesis"]
