[package]
name = "quickwit-cli"
version = "0.1.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit is a cost-efficient search engine."
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[[bin]]
name = "quickwit"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
anyhow = "1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
clap = { version = "=3.0.0-beta.5", features = ["yaml"] }
quickwit-actors = { version = "0.1.0", path = "../quickwit-actors" }
quickwit-core = { version = "0.1.0", path = "../quickwit-core" }
quickwit-directories = { version = "0.1.0", path = "../quickwit-directories" }
quickwit-common = { version = "0.1.0", path = "../quickwit-common" }
quickwit-config = { version = "0.1.0", path = "../quickwit-config" }
quickwit-metastore = { version = "0.1.0", path = "../quickwit-metastore" }
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }
quickwit-index-config = { version = "0.1.0", path = "../quickwit-index-config" }
quickwit-indexing = { version = "0.1.0", path = "../quickwit-indexing" }
quickwit-search = { version = "0.1", path = "../quickwit-search" }
quickwit-serve = { version = "0.1", path = "../quickwit-serve" }
quickwit-telemetry = { version = "0.1", path = "../quickwit-telemetry" }
quickwit-proto = { version = "0.1", path = "../quickwit-proto" }
tabled = "0.4"
tracing = "0.1.29"
tracing-subscriber = {version="0.3", features=["time", "std", "env-filter"]}
tracing-opentelemetry = "0.16"
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
atty = "0.2"
once_cell = "1"
serde_json = "1.0"
tempfile = "3"
chrono = "0.4"
humansize = "1.1.1"
openssl-probe = { version = "0.1.4", optional = true }
itertools = "0.10.3"
colored = "2.0.0"
futures = "0.3"
regex = "1.5.4"
time = "0.3.5"
console-subscriber = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
serial_test = "0.5.1"

[features]
ci-test = []
tokio-console = ["console-subscriber"]
openssl-support = ["openssl-probe"]
release-feature-set = ["quickwit-metastore/postgres", "quickwit-indexing/kafka", "openssl-support"]
release-feature-vendored-set = ["quickwit-metastore/postgres", "quickwit-indexing/vendored-kafka", "openssl-support"]
