[package]
name = "quickwit-cli"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit is a cost-efficient search engine."
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"
default-run = "quickwit"

[[bin]]
name = "quickwit"
path = "src/main.rs"

[[bin]]
name = "generate_markdown"
path = "src/generate_markdown.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
atty = "0.2"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
clap = { version = "= 3.1", features = ["yaml", "env"] }
colored = "2.0.0"
console-subscriber = { version = "0.1.0", optional = true }
futures = "0.3"
humansize = "1.1.1"
humantime = "2.1.0"
itertools = "0.10.3"
once_cell = "1"
openssl-probe = { version = "0.1.4", optional = true }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-cluster = { version = "0.3.1", path = "../quickwit-cluster" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-core = { version = "0.3.1", path = "../quickwit-core" }
quickwit-directories = { version = "0.3.1", path = "../quickwit-directories" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-indexing = { version = "0.3.1", path = "../quickwit-indexing" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
quickwit-search = { version = "0.3.1", path = "../quickwit-search" }
quickwit-serve = { version = "0.3.1", path = "../quickwit-serve" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
quickwit-telemetry = { version = "0.3.1", path = "../quickwit-telemetry" }
regex = "1.6.0"
serde_json = "1.0"
tabled = "0.8"
tempfile = "3"
thousands = "0.2.0"
tikv-jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"
time = { version = "0.3.5", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.5.8"
tracing = "0.1.29"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", features = [
  "time",
  "std",
  "env-filter"
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls"
] }
serial_test = "0.9.0"

[features]
ci-test = []
openssl-support = ["openssl-probe"]
tokio-console = ["console-subscriber"]
release-feature-set = [
  "quickwit-metastore/postgres",
  "quickwit-metastore/azure",
  "quickwit-indexing/kafka",
  "quickwit-indexing/kinesis",
  "openssl-support"
]
release-feature-vendored-set = [
  "quickwit-metastore/postgres",
  "quickwit-metastore/azure",
  "quickwit-indexing/vendored-kafka",
  "quickwit-indexing/kinesis",
  "openssl-support"
]
