[package]
name = "quickwit-cluster"
version = "0.1.0"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = "2018"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's cluster membership"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1.0"
quickwit-swim = { version = "0.1", path = "../quickwit-swim" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.7", features = [ "full" ] }
tokio-stream = { version = "0.1.6", features = [ "sync" ] }
tonic = "0.5.2"
tracing = "0.1"
uuid = "0.8"
flume = "0.10"

quickwit-proto = { version = "0.1.0", path = "../quickwit-proto"}

[dev-dependencies]
tempfile = "3.2.0"
