[package]
name = "quickwit-cluster"
version = "0.2.1"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's cluster membership"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
flume = "0.10"
quickwit-common = { version = "0.2.1", path = "../quickwit-common"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.16", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "sync" ] }
tracing = "0.1.29"
uuid = "0.8"
quickwit-proto = { version = "0.2.1", path = "../quickwit-proto"}
scuttlebutt = { git = "https://github.com/quickwit-oss/scuttlebutt", version = "0.1.0", rev="9ce60f1" }

[dev-dependencies]
itertools = '0.10'
tempfile = "3"
