[package]
name = "quickwit-common"
version = "0.1.0"
authors = ['Quickwit, inc <hello@quickwit.io>']
edition = "2018"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Util crate of quickwit"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
env_logger = "0.9"
