[package]
name = "quickwit-common"
version = "0.2.0"
authors = ['Quickwit, inc <hello@quickwit.io>']
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Util crate of quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
colored = "2"
env_logger = "0.9"
once_cell = "1"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
regex = "1"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
warp = '0.3'
tracing = "0.1.29"
home = "0.5.3"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
