[package]
name = "quickwit-common"
version = "0.2.1"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Util crate of quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
colored = "2"
env_logger = "0.9"
futures = "0.3"
home = "0.5.3"
once_cell = "1"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
regex = "1"
serde = "1.0"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
tracing = "0.1.29"
warp = '0.3'
path-slash = "0.1.4"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"
