[package]
name = "quickwit-config"
version = "0.1.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial license, contact hello@quickwit.io
description = "Quickwit configuration"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
json_comments = "0.2"
quickwit-common = { version = "0.1.0", path = "../quickwit-common" }
quickwit-index-config = { version = "0.1.0", path = "../quickwit-index-config" }
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }
quickwit-proto = { version = "0.1.0", path = "../quickwit-proto" }
tantivy = { git= "https://github.com/quickwit-inc/tantivy", rev="48c47f0d3", default-features=false, features = ["mmap", "lz4-compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3"
toml = "0.5"
tracing = '0.1'

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
