[package]
name = "quickwit-config"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial license, contact hello@quickwit.io
description = "Quickwit configuration"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
derivative = "2.2.0"
json_comments = "0.2"
new_string_template = "1.3.1"
once_cell = "1.13.0"
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"
tracing = "0.1.29"

[features]
testsuite = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
