[package]
name = "quickwit-control-plane"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.29"
anyhow = "1"
async-trait = "0.1"
chitchat = "0.4"
itertools = "0.10.3"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-cluster = { version = "0.3.1", path = "../quickwit-cluster" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-core = { version = "0.3.1", path = "../quickwit-core" }
quickwit-indexing = { version = "0.3.1", path = "../quickwit-indexing" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
