[package]
name = "quickwit-core"
version = "0.1.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Core crate of quickwit"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byte-unit = "4"
quickwit-actors = {path="../quickwit-actors"}
quickwit-indexing = { version = "0.1.0", path = "../quickwit-indexing" }
quickwit-common = {path="../quickwit-common"}
quickwit-index-config = { version = "0.1.0", path = "../quickwit-index-config" }
quickwit-metastore = { version = "0.1.0", path = "../quickwit-metastore" }
quickwit-directories = { version = "0.1.0", path = "../quickwit-directories" }
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
rand = "0.8"
tantivy = { git= "https://github.com/quickwit-inc/tantivy", rev="ff631ec", default-features=false, features = ["mmap", "lz4-compression"] }
futures = "0.3"
futures-util = { version = "0.3.1", default-features = false }
uuid = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = '0.1'
tokio-stream = "0.1.6"
tempfile = '3'

[dev-dependencies]
mockall = '0.9'
quickwit-metastore = { version = "0.1.0", path = "../quickwit-metastore", features=["testsuite"]}
