[package]
name = "quickwit-core"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Core crate of quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
futures = "0.3"
futures-util = { version = "0.3.1", default-features = false }
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-directories = { version = "0.3.1", path = "../quickwit-directories" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-indexing = { version = "0.3.1", path = "../quickwit-indexing" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "a568857", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.29"
uuid = { version = "1.1", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11"
serde_yaml = "0.8"
