[package]
name = 'quickwit-directories'
version = "0.3.0"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = '2021'
license = 'AGPL-3.0-or-later'  # For a commercial, license, contact hello@quickwit.io
description = "Crate containing all of the custom tantivy Directory used in quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
crossbeam = "0.8"
futures = "0.3"
serde = "1"
serde_cbor = "0.11"
serde_json = "1"
tantivy = { version = "0.18.0", default-features=false, features = ["mmap", "lz4-compression", "quickwit"] }
quickwit-storage = { version = "0.3.0", path = "../quickwit-storage" }
uuid = { version = "1.1", features = ["v4", "serde"] }
once_cell = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.29"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
time = { version = "0.3.9", features = ["std"] }

[dev-dependencies]
tempfile = '3'
