[package]
name = "quickwit-directories"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Crate containing all of the custom tantivy Directory used in quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
once_cell = "1"
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
serde = "1"
serde_cbor = "0.11"
serde_json = "1"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "d8700129", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
thiserror = "1"
time = { version = "0.3.9", features = ["std"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.29"

[dev-dependencies]
tempfile = "3"
