[package]
name = "quickwit-doc-mapper"
version = "0.3.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit index configuration"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
base64 = "0.13"
dyn-clone = "1.0.4"
fnv = "1"
itertools = "0.10"
once_cell = "1.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "88054aa", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
tantivy-query-grammar = { git = "https://github.com/quickwit-oss/tantivy/", rev = "88054aa" }
thiserror = "1.0"
tracing = "0.1.29"
typetag = "0.1"
quickwit-proto = { version = "0.3", path = "../quickwit-proto" }
mockall = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.3"
matches = "0.1.8"
mockall = "0.11"

[features]
testsuite = ["mockall"]

[[bench]]
name = "doc_to_json_bench"
harness = false
