[package]
name = "quickwit-doc-mapping"
version = "0.1.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2018"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io

[dependencies]
anyhow = "1"
tantivy = "0.14"
serde_json = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
