[package]
name = "quickwit-doc-mapping"
version = "0.1.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2018"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io

[dependencies]
anyhow = "1"
regex = "1"
tantivy = { git= "https://github.com/quickwit-inc/tantivy", rev="c1d1d84" }
serde_json = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1"
dyn-clone = "1.0.4"
once_cell = "1.4"
tantivy-query-grammar = { git= "https://github.com/quickwit-inc/tantivy/", rev="c1d1d84" }
combine = "4.6"
base64 = "0.13"
chrono = "0.4"

[dependencies.quickwit-proto]
path = '../quickwit-proto'

[dependencies.mockall]
version = "0.9"
optional = true

[dev-dependencies]
mockall = '0.9'

[dev-dependencies.matches]
version = "0.1.8"

[features]
testsuite = ["mockall"]

